--- a/app/src/main/res/layout/activity_lockscreen.xml
+++ b/app/src/main/res/layout/activity_lockscreen.xml
@@ -13,4 +13,14 @@
         android:textColor="@android:color/white"
         android:textSize="54sp" />
 
+    <Button
+        android:id="@+id/btn_unlock"
+        android:layout_width="150dp"
+        android:layout_height="60dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="90dp"
+        android:text="解锁"
+        android:textSize="16sp" />
+
 </RelativeLayout>
