--- a/lockscreen/src/main/res/values/style.xml
+++ b/lockscreen/src/main/res/values/style.xml
@@ -12,4 +12,6 @@
         <item name="android:activityCloseEnterAnimation">@anim/activity_open</item>
         <item name="android:activityCloseExitAnimation">@anim/activity_open</item>
     </style>
+
+    <style name="TransTheme" parent="@android:style/Theme.Translucent.NoTitleBar" />
 </resources>
